--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -18,7 +18,6 @@
             $scope.cropper_for_copmany = true;
 
             $scope.url_back = {{raw_url_for('company.companies') | safe}};
-            $scope.url_portal_profile = {{raw_url_for('portal.profile') | safe}};
 
             $scope.data = {};
             $scope.coordinates = [];
@@ -27,11 +26,6 @@
 
             $scope.go_to_portal = function (host) {
                 window.location.href = 'http://' + host;
-            };
-
-            $scope.portal_edit = function (company_id, portal_id) {
-                window.location.href =
-                        $scope.url_portal_profile({'company_id': company_id, 'portal_id': portal_id});
             };
 
             $scope.edit = function () {
@@ -71,12 +65,8 @@
                     </button>
                     <div ng-if="data.id">
                         <button class="btn btn-default go-portal pull-right border-radius" type="button"
-                                ng-if="!data.own_portal && can_edit_portal" ng-click="portal_edit(data.id)">{{
+                                ng-if="!data.own_portal && can_edit_portal" ng-click="{% endraw %}{{ url_for('portal.profile', company_id = company.id) | safe }}{% raw %}">{{
                             ::_('Launch portal')}}
-                        </button>
-                        <button class="btn btn-default go-portal pull-right border-radius" type="button"
-                                ng-if="data.own_portal && can_edit_portal" ng-click="portal_edit(data.id, data.own_portal.id)">{{
-                            ::_('Update portal')}}
                         </button>
                         <button ng-if="editing" class="btn btn-default save-profile pull-right border-radius"
                                 type="button" ng-click="$af.save(data)"
