--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -28,6 +28,10 @@
                 window.location.href = 'http://' + host;
             };
 
+            $scope.launch_portal = function (host) {
+                window.location.href = '{{ url_for('portal.profile', create_or_update = 'create', company_id = company.id) | safe }}';
+            };
+
             $scope.edit = function () {
                 $scope.editing = $scope.can_edit_company;
             };
@@ -65,7 +69,7 @@
                     </button>
                     <div ng-if="data.id">
                         <button class="btn btn-default go-portal pull-right border-radius" type="button"
-                                ng-if="!data.own_portal && can_edit_portal" ng-click="{% endraw %}{{ url_for('portal.profile', company_id = company.id) | safe }}{% raw %}">{{
+                                ng-if="!data.own_portal && can_edit_portal" ng-click="launch_portal()">{{
                             ::_('Launch portal')}}
                         </button>
                         <button ng-if="editing" class="btn btn-default save-profile pull-right border-radius"
