translation. not finished and hiden

--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -15,6 +15,7 @@
 
         $scope.url_portal_tags = {{ raw_url_for('portal.tags')|safe }};
         $scope.url_portal_banners = {{ raw_url_for('portal.portal_banners')|safe }};
+        $scope.url_portal_translations = {{ raw_url_for('portal.translations')|safe }};
         $scope.url_company_readers = {{ raw_url_for('company.readers')|safe }};
         $scope.url_portal_portals_partners = {{ raw_url_for('portal.portals_partners')|safe }};
 
@@ -38,12 +39,9 @@
                        href="{{ url_portal_portals_partners({company_id: company.id}) }}">{{ _('Membership') }}</a>
                     <a ng-class="{'selected': selected_company_menu == 'companies_employees'}"
                        href="{{ url_company_employees({company_id: company.id}) }}">{{ _('Employees') }}</a>
-
-
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'home'}"
-                           href="{{ url_company_profile({company_id: company.id}) }}">{{ company.name }}</a>
+                       href="{{ url_company_profile({company_id: company.id}) }}">{{ company.name }}</a>
                     <img pr-image-url="{{ company.logo.url }}" class="menu-company-logo pull-right"/>
-
                 </div>
             </div>
 
@@ -51,6 +49,8 @@
                 <div ng-if="company.own_portal" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pl0 pr0">
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'portal_profile'}"
                        href="{{ url_portal_portal({company_id: company.id, create_or_update: 'update'}) }}">{{ _('Portal profile') }}</a>
+                    <a ng-if="0" class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_translations'}"
+                       href="{{ url_portal_translations({company_id: company.id}) }}">{{ _('Translations') }}</a>
                     <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_banners'}"
                        href="{{ url_portal_banners({company_id: company.id}) }}">{{ _('Banners') }}</a>
                     <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_tags'}"
