--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -32,12 +32,12 @@
                     }
                 };
 
-        $scope.url_company_companies = {{ raw_url_for('company.companies')|safe }}
-                $scope.url_general_help = {{ raw_url_for('index.contact_us')|safe }}
-                        $scope.url_tutorial = {{ raw_url_for('tutorial.index')|safe }}
-                                $scope.url_auth_logout = {{ raw_url_for('auth.logout')|safe }}
-                                        $scope.url_user_profile = {{ raw_url_for('user.profile')|safe }}
-                                                $scope.user_avatar_url = '{{ current_user.get_avatar()['url'] }}';
+        $scope.url_company_companies = {{ raw_url_for('company.companies')|safe }};
+        $scope.url_general_help = {{ raw_url_for('index.contact_us')|safe }};
+        $scope.url_tutorial = {{ raw_url_for('tutorial.index')|safe }};
+        $scope.url_auth_logout = {{ raw_url_for('auth.logout')|safe }};
+        $scope.url_user_profile = {{ raw_url_for('user.profile')|safe }};
+        $scope.user_avatar_url = '{{ current_user.get_avatar()['url'] }}';
         $scope.url_messenger = '{{ url_for('messenger.messenger'|safe) }}';
         $scope.login_url = '{{ url_for('auth.login_signup_endpoint')|safe }}';
 
@@ -58,7 +58,7 @@
             $ok('{{ url_for('user.change_language') }}', {'language': lang}, function (resp) {
                 location.reload();
             });
-        }
+        };
 
         $scope.selected_user_menu = '';
         $scope.set_selected_user_menu = function (menu_item) {
@@ -98,28 +98,27 @@
                                                                                            title="{{ _('Всі повідомлення') }}"
                                                                                            class="pr"
                                                                                            ng-class="{'selected': selected_user_menu == 'messages'}"><i
-                            class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span><div
+                            class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span>
+                        <div
                                 ng-if="unread_message_count || unread_notification_count || contact_request_count"
                                 class="pa unread_messages_and_notifications_count">{{ unread_message_count +
-                            unread_notification_count + contact_request_count}}</div></a></li>
+                            unread_notification_count + contact_request_count}}
+                        </div>
+                    </a></li>
                     <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %}
                             href="{{ url_company_companies() }}"
                             title="{{ _('Компанії') }}"
                             ng-class="{'selected': selected_user_menu == 'companies'}"><i
                             class="fa fa-building-o"></i><span>{{ _('Компанії') }}</span></a></li>
                     <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %} href=""
-                                                                                           ng-click="open_filemanager()"
-                                                                                           title="{{ _('Менеджер файлів') }}"
-                                                                                           ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
+                            ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
+                            ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                             class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
                     <li class="dropdown"><a {% endraw %}{{ tbvm() }}{% raw %} href="{{ url_general_help() }}"
-                                                                              title="{{ _('Contact us') }}"
-                                                                              ng-class="{'selected': selected_user_menu == 'contact_us'}"><i
+                            title="{{ _('Contact us') }}" ng-class="{'selected': selected_user_menu == 'contact_us'}"><i
                             class="fa fa-question-circle"></i><span>{{ _('Contact us') }}</span></a></li>
-
                     <li class="dropdown"><a {% endraw %}{{ tbvm() }}{% raw %} href="{{ url_tutorial() }}"
-                                                                              title="{{ _('tutorial') }}"
-                                                                              ng-class="{'selected': selected_user_menu == 'tutorial'}"><i
+                            title="{{ _('tutorial') }}" ng-class="{'selected': selected_user_menu == 'tutorial'}"><i
                             class="fa fa-file-video-o"></i><span>{{ _('Tutorial') }}</span></a></li>
 
                     <li class="dropdown"><a class="dropbtn" title="{{ _('Language') }}"><i
